# LightUp-Solver

./: .gitignore  3Same.cnf  3res.cnf  3res.txt  CMakeLists.txt  Example.cnf  Makefile  README.md  Same.cnf  Sat 3-SAT draft.txt  caseNonLibre(3,2).txt  cnfMaker.c  colonneMurProtegeLampe(3,5)(6,1).txt  coordonnes.c  correctAllGridGiven.sh  correctGrid.sh  correctGridWalkSat.sh  correctRandom.sh  correctRandomWalkSat.sh  dimacs.c  dimacs.h  eclaireDessus(coins)(6,6).txt  eclaireGauche(coins)(6,0).txt  entoureMur(3,3).txt  generation.c  generation.h  grid.c  grid.h  gridGeneration.c  grille.txt  ligneColonneFree(5,3).txt  ligneMurProtegeLampe(4,2)(1,6).txt  logic.c  logic.h  main  main.c  minisat.output  new.cnf  res.cnf  res.grid  (+8 more)
CR - Projet/: [INF432]Projet (Light Up) Da Costa Barros - Pellieux - Segransan.aux  [INF432]Projet (Light Up) Da Costa Barros - Pellieux - Segransan.blg  [INF432]Projet (Light Up) Da Costa Barros - Pellieux - Segransan.tex
Test/: UnsolvableGenerate.txt  eclaireDessous(coins)(0,0).txt  eclaireDroite(coins)(0,6).txt  grille.txt  lampeDessous(2,1)(2,5).txt  lampeDessus(2,6).txt  lampeDroite(3,5).txt  lampeGauche(4,5).txt  testF10.txt  testF11.txt  testF12.txt  testF13.txt  testF14.txt  testF15.txt  testF16.txt  testF17.txt  testF19.txt  testF2.txt  testF20.txt  testF21.txt  testF22.txt  testF23.txt  testF24.txt  testF25.txt  testF26.txt  testF27.txt  testF28.txt  testF29.txt  testF3.txt  testF30.txt  testF34.txt  testF35.txt  testF3B.txt  testF4.txt  testF5.txt  testF6.txt  testF8.txt  testF9.txt  testF9B.txt  testSimpleEfficacite.grid  (+1 more)
(+2 files in other folders)
